Download Projects/ssu_score/#P1_20142468_v1.0/소스코드/ERR/20190010/12_error.txt
../../STD_DIR/20190010/12.c: In function 'ssu_thread_consumer':
../../STD_DIR/20190010/12.c:31:6: error: 'i' undeclared (first use in this function)
  for(i = 1; i <= 300; i++) {
      ^
../../STD_DIR/20190010/12.c:31:6: note: each undeclared identifier is reported only once for each function it appears in
../../STD_DIR/20190010/12.c:37:3: error: 'sum' undeclared (first use in this function)
   sum += buf[--length];
   ^~~
sh: 1: ./12.stdexe: not found
